fixed scrollbar - need fixed height for the container

--- a/main.css
+++ b/main.css
@@ -12,11 +12,12 @@ html {
 .container {
     display: inline-flex;
     flex-grow: 1;
-    /*
-   flex-grow: fills up the rest of the div
-   */
+    /*flex-grow: fills up the rest of the div*/
 
-
+    /* position: relative;*/
+    height: 300px;
+    /*in the "wrapper" or "container", there has to be a set 
+    height in order for the scroll features in the child divs to work*/
 }
 
 
@@ -142,14 +143,15 @@ aside {
     padding: 1% 1% 100%;
     height: 100%;
     width: 20%;
-    overflow-y: auto;
+    overflow-y: scroll;
     overflow-x: hidden;
-
-
 
 }
 
-
+.popular::-webkit-scrollbar {
+    opacity: 0;
+    width: 0px
+}
 
 
 
@@ -259,16 +261,3 @@ h4 {
     padding: 1%;
     width: auto;
 }
-
-/*
-.th1 {
-    width: 2%;
-}
-
-.th2 {
-    width: 50%;
-}
-
-.th3 {
-    width: 48%;
-}*/
